# RAG

./: .gitignore  README.md  benchmark_results.json  faq_question.csv  pyproject.toml  requirements.txt
document_groups/informational/: 20. Памятка до 150 кВт.md  21. Памятка свыше 150 кВт.md  22.Документ из сайта, особенности тех приса.md  6. Информационное письмо по платным услугам.md  6.1 Заявление на платные услуги ФЛ.md  6.2 Заявление на платные услуги ЮЛ.md
document_groups/instructions/: 10. Инструкция по работе в ЛК (для заявителя) (от января 2024).md  7. Инструкция по самостоятельному подключению.md-bf65565f-9114-48e1-89ff-4a79d8bc83c1.md
document_groups/legal/: 1. ФЗ 35 (28.04.2025).md  2. 861 (28.04.2025).md  3. 1178 Основы ценообразования.md  4. 490_22 Методические указания.md  5. Постановление ГКТ РБ №508 от 29.11.2024 ставки ТП и выпадающие 2025.md  8. 186 О единых стандартах обслуживания.md  9. 442 О ФУНКЦИОНИРОВАНИИ РОЗНИЧНЫХ РЫНКОВ.md
document_groups/passports/: 11. Паспорт услуги до 15кВт.md  12. Паспорт услуги до 150кВт.md  13. Паспорт услуги от 150кВт до 670 кВт.md  14. Паспорт услуги перераспределение.md  15. Паспорт услуги индивидуальный проект.md  16. Паспорт услуги восстановление_переоформление.md  17. Паспорт услуги вывод из эксплуатации.md  18. Паспорт услуги временное присоединение.md  19. Паспорт услуги свыше 670 кВт.md
rag/: answer_generator.py  benchmark.py  retriever.py
rag/preprocessing/: cleaner.py
