[project]
name = "rag-with-llamaindex"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "llama-index-core>=0.11.0",
    "llama-index-readers-file>=0.4.0",      # для загрузки Markdown и др.
    "llama-index-embeddings-huggingface>=0.2.0",
    "llama-index-vector-stores-qdrant>=0.3.0",
    "llama-index-llms-ollama>=0.3.0",
    "sentence-transformers>=3.0.0",         # используется внутри эмбеддингов
    "qdrant-client>=1.16.0",
    "tqdm>=4.66.0",
    "numpy>=1.24",
    "uvicorn>=0.30.0",
    "fastapi>=0.110.0",
]